# quizhero-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  db_deploy.sh  deploy.sh  entrypoint.sh  gunicorn_config.py  json-quiz.json  pyproject.toml  vars-prod.tf
.github/workflows/: deploy.yml
iac/: dev.tfvars  main.tf  network.tf  vars-dev.tf
iac/ec2-instance/: network.tf  output.tf  provider.tf
iac/ec2-instance/env/dev/: main.tf
quizhero-app/: manage.py
quizhero-app/apps/quizzes/: admin.py  models.py  urls.py  views.py
quizhero-app/apps/quizzes/management/commands/: seed.py
quizhero-app/apps/quizzes/migrations/: 0001_initial.py  0002_question_correct_alternative.py  0003_remove_question_alternative_a_and_more.py  0004_quiz_user.py  0005_quizfolder.py  0006_category_quizfolder_category.py  0007_alter_question_description_and_more.py
quizhero-app/apps/quizzes/static/quizzes/css/: quiz-view.css  styles.css
quizhero-app/apps/quizzes/static/quizzes/js/: play-quiz.js  script.js
quizhero-app/apps/quizzes/templates/quizzes/pages/: create-json-quiz.html  csv-upload.html  home.html  login.html  quiz-view.html
quizhero-app/apps/quizzes/templates/quizzes/partials/: footer.html  head.html  quiz.html
quizhero-app/base_static/global/css/: base-styles.css
quizhero-app/base_templates/global/: base.html  base_no_header.html
quizhero-app/base_templates/global/partials/: footer.html  head.html  header.html
quizhero-app/quizhero_app/: asgi.py  settings.py  urls.py  wsgi.py
quizhero-app/utils/: factory.py  settings.py
