[tool.poetry]
name = "quizhero-app"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <matheusblopes10@gmail.com>"]
readme = "README.md"
packages = [{include = "quizhero_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
prettyconf = "^2.2.1"


[tool.poetry.group.dev.dependencies]
faker = "^19.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
