[tool.poetry]
name = "quizhero-app"
version = "0.1.0"
description = ""
authors = ["MatheusBLopes <matheusblopes10@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
prettyconf = "^2.2.1"
whitenoise = "^6.6.0"
gunicorn = "^21.2.0"
gevent = "^23.9.1"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"



[tool.poetry.group.dev.dependencies]
faker = "^19.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
